--- a/app/src/main/res/layout/activity_caterer__register.xml
+++ b/app/src/main/res/layout/activity_caterer__register.xml
@@ -163,11 +163,11 @@
 
     <Button
         android:id="@+id/cregister"
-        android:layout_width="347dp"
-        android:layout_height="61dp"
+        android:layout_width="301dp"
+        android:layout_height="58dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:paddingLeft="20dp"
@@ -176,7 +176,7 @@
         android:paddingBottom="15dp"
         android:text="Register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sevicename"
         tools:background="@drawable/button_bg" />
@@ -187,10 +187,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="75dp"
         android:layout_marginLeft="75dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
-        android:text="Already have an account?"
+        android:text="Already have an account?Click here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.393"
         app:layout_constraintStart_toStartOf="parent"
