--- a/app/src/main/res/layout/activity_login__page.xml
+++ b/app/src/main/res/layout/activity_login__page.xml
@@ -21,6 +21,7 @@
        android:background="@drawable/loginpagebg"
        android:layout_marginBottom="25dp"
        />
+
     <EditText
         android:id="@+id/lemailId"
         android:layout_width="match_parent"
@@ -30,45 +31,46 @@
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_baseline_email_24"
         android:hint="Email Id"
-        android:paddingLeft="20dp"
+        android:paddingLeft="15dp"
+        android:paddingTop="15dp"
         android:paddingRight="10dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        />
+        android:paddingBottom="15dp" />
 
     <EditText
         android:id="@+id/lPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:hint="Password"
-        android:paddingLeft="20dp"
+        android:paddingLeft="15dp"
         android:paddingRight="10dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         />
 
  <TextView
+     android:id="@+id/forgotPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Forgot Password?"
      android:textColor="@color/blue"
      android:layout_marginHorizontal="30dp"
-     android:paddingLeft="230dp"
+     android:paddingLeft="180dp"
      android:layout_marginTop="0dp"
      android:layout_marginBottom="10dp"
      />
 
     <Button
+        android:id="@+id/lButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/button_bg"
+        android:background="@drawable/buttonbg"
         android:paddingBottom="15dp"
         android:paddingTop="15dp"
         android:paddingRight="10dp"
@@ -79,7 +81,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Already have an account?Click here"
+        android:text="Don't have an account?Create here"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
