--- a/app/src/main/res/layout/activity_user__register.xml
+++ b/app/src/main/res/layout/activity_user__register.xml
@@ -166,23 +166,23 @@
 
     <Button
         android:id="@+id/register"
-        android:layout_width="347dp"
-        android:layout_height="66dp"
+        android:layout_width="332dp"
+        android:layout_height="57dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginRight="32dp"
         android:paddingLeft="10dp"
         android:paddingTop="15dp"
         android:paddingRight="10dp"
         android:paddingBottom="15dp"
         android:text="Register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.304"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
-        tools:background="@drawable/button_bg" />
+        tools:background="@drawable/buttonbg" />
 
     <TextView
         android:id="@+id/alreadyhaveaccount"
@@ -193,7 +193,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Already have an account?"
+        android:text="Already have an account?Click here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
