--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -32,7 +32,7 @@
     <TextView
         android:layout_width="251dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="80dp"
+        android:layout_marginLeft="70dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="70dp"
         android:fontFamily="sans-serif-medium"
@@ -44,28 +44,31 @@
     <EditText
         android:id="@+id/fEmailId"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="55dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/input_bg"
-        android:drawableRight="@drawable/ic_baseline_email_24"
+        android:drawableLeft="@drawable/ic_baseline_email_24"
         android:hint="Email Id"
         android:paddingLeft="15dp"
         android:paddingTop="15dp"
         android:paddingRight="10dp"
-        android:paddingBottom="15dp"
+        android:paddingBottom="13dp"
         />
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="290dp"
         android:layout_height="wrap_content"
-        android:text="Send Link"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/button_bg"
-        android:paddingBottom="15dp"
+        android:paddingLeft="10dp"
         android:paddingTop="15dp"
         android:paddingRight="10dp"
-        android:paddingLeft="10dp"
-        android:layout_marginTop="15dp" />
+        android:paddingBottom="15dp"
+        android:text="Send Link"
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-medium"/>
 </LinearLayout>
