--- a/app/src/main/res/layout/activity_user__register.xml
+++ b/app/src/main/res/layout/activity_user__register.xml
@@ -5,18 +5,12 @@
     android:id="@+id/text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/userregisterbg"
     tools:context=".User_Register">
 
     <TextView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="166dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif-medium"
         android:text="Register"
@@ -24,10 +18,9 @@
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.096" />
+        app:layout_constraintVertical_bias="0.05" />
 
     <EditText
         android:id="@+id/username"
@@ -50,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
-        tools:drawableLeft="@drawable/ic_baseline_person_24" />
+        android:drawableLeft="@drawable/ic_baseline_person_24" />
 
     <EditText
         android:id="@+id/Phoneno"
@@ -166,23 +159,23 @@
 
     <Button
         android:id="@+id/register"
-        android:layout_width="332dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginLeft="64dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginRight="32dp"
+        android:background="@drawable/button_bg"
+        android:fontFamily="sans-serif-medium"
         android:paddingLeft="10dp"
-        android:paddingTop="15dp"
+        android:paddingTop="20dp"
         android:paddingRight="10dp"
         android:paddingBottom="15dp"
         android:text="Register"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.304"
+        app:layout_constraintHorizontal_bias="0.404"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
-        tools:background="@drawable/buttonbg" />
+        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
 
     <TextView
         android:id="@+id/alreadyhaveaccount"
